--- a/buildpack.toml
+++ b/buildpack.toml
@@ -29,7 +29,7 @@ id = "org.cloudfoundry.stacks.cflinuxfs3"
 [[metadata.dependencies]]
 id      = "datadog-trace-java"
 name    = "Datadog Trace Java Agent"
-version = "latest"
+version = "0.0"
 uri     = "https://dtdg.co/latest-java-tracer"
 stacks  = [ "io.buildpacks.stacks.bionic", "org.cloudfoundry.stacks.cflinuxfs3" ]
 
