--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -68,12 +68,26 @@ jobs:
           exit 0
         fi
       
-    - name: Run Tests
+    - name: Run Unit Tests
       run:  go test ./...
 
-    # - name: Check buildpack can be packaged properly
-    #   run: |
-    #     #!/usr/bin/env bash
-    #     set -euo pipefail
+    - name: Check Buildpack Packages Successfully
+      run: |
+        #!/usr/bin/env bash
+        set -euo pipefail
 
+        mkdir ${HOME}/build
+
+        echo "Package repo using jam"
+        jam pack --buildpack "${GITHUB_WORKSPACE}/buildpack.toml" --version ${VERSION} --output "${HOME}/build/${PACKAGE_NAME}"
+
+        echo "Building docker image using packaged tgz"
+        echo "[buildpack]
+        uri = '${HOME}/build/${PACKAGE_NAME}'
+        [platform]
+        os = 'linux'" > ${HOME}/build/package.toml
+        pack package-buildpack "datadog/datadog-trace:${VERSION}" --config ${HOME}/build/package.toml --format image
+      env:
+        VERSION: 1.0.0
+        PACKAGE_NAME: datadog-trace.tgz
         
