--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Go
+    - name: Install Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
@@ -88,6 +88,26 @@ jobs:
         os = 'linux'" > ${HOME}/build/package.toml
         pack package-buildpack "datadog/datadog-trace:${VERSION}" --config ${HOME}/build/package.toml --format image
       env:
-        VERSION: 1.0.0
+        VERSION: 0.1.1
         PACKAGE_NAME: datadog-trace.tgz
+      
+    - name: Publish buildpack
+      run: |
+        #!/usr/bin/env bash
+        set -euo pipefail
+
+        echo "Authenticating Github Docker"
+        echo ${GITHUB_TOKEN} | docker login https://docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        
+        echo "Publishing to Github Packages"
+        echo "Repo name is ${REPO_NAME}"
+
+        docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" docker.pkg.github.com/datadog/${REPO_NAME}/${BUILPACK_NAME}:${BUILDPACK_VERSION}
+        docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILPACK_NAME}:${BUILDPACK_VERSION}
+        
+      env:
+        BUILDPACK_VERSION: 0.1.1
+        BUILDPACK_NAME: datadog-trace
+        REPO_NAME: ${{ github.repository.name }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
