--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,10 +100,11 @@ jobs:
         echo ${GITHUB_TOKEN} | docker login https://docker.pkg.github.com -u ${{ github.actor }} --password-stdin
         
         echo "Publishing to Github Packages"
+        echo "${{ github }}"
         echo "Repo name is ${REPO_NAME}"
 
-        docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" docker.pkg.github.com/datadog/${REPO_NAME}/${BUILPACK_NAME}:${BUILDPACK_VERSION}
-        docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILPACK_NAME}:${BUILDPACK_VERSION}
+        docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
+        docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
         
       env:
         BUILDPACK_VERSION: 0.1.1
