--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,23 +91,44 @@ jobs:
         VERSION: 0.1.1
         PACKAGE_NAME: datadog-trace.tgz
       
-    - name: Publish buildpack
-      run: |
-        #!/usr/bin/env bash
-        set -euo pipefail
+    # - name: Publish buildpack
+    #   run: |
+    #     #!/usr/bin/env bash
+    #     set -euo pipefail
 
-        echo "Authenticating Github Docker"
-        echo ${GITHUB_TOKEN} | docker login https://docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+    #     echo "Authenticating Github Docker"
+    #     echo ${GITHUB_TOKEN} | docker login https://docker.pkg.github.com -u ${{ github.actor }} --password-stdin
         
-        echo "Publishing to Github Packages"
-        echo "Repo name is ${REPO_NAME}"
+    #     echo "Publishing to Github Packages"
+    #     echo "Repo name is ${REPO_NAME}"
 
-        docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
-        docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
+    #     docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
+    #     docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
         
-      env:
-        BUILDPACK_VERSION: 0.1.1
-        BUILDPACK_NAME: datadog-trace
-        REPO_NAME: ${{ github.event.repository.name }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   env:
+    #     BUILDPACK_VERSION: 0.1.1
+    #     BUILDPACK_NAME: datadog-trace
+    #     REPO_NAME: ${{ github.event.repository.name }}
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - id: version
+        name: Compute Version
+        run: |
+          #!/usr/bin/env bash
+          set -euo pipefail
+
+          echo "GITHUB REF IS ${GITHUB_REF}"
+
+          if [[ ${GITHUB_REF} =~ refs/tags/v([0-9]+\.[0-9]+\.[0-9]+) ]]; then
+            VERSION=${BASH_REMATCH[1]}
+          elif [[ ${GITHUB_REF} =~ refs/heads/(.+) ]]; then
+            VERSION=${BASH_REMATCH[1]}
+          else
+            VERSION=$(git rev-parse --short HEAD)
+          fi
+          echo "::set-output name=version::${VERSION}"
+          echo "Selected ${VERSION} from
+            * ref: ${GITHUB_REF}
+            * sha: ${GITHUB_SHA}
+          "
         
