--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,24 +111,23 @@ jobs:
     #     REPO_NAME: ${{ github.event.repository.name }}
     #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - id: version
-        name: Compute Version
-        run: |
-          #!/usr/bin/env bash
-          set -euo pipefail
+  - name: Compute Version
+    run: |
+      #!/usr/bin/env bash
+      set -euo pipefail
 
-          echo "GITHUB REF IS ${GITHUB_REF}"
+      echo "GITHUB REF IS ${GITHUB_REF}"
 
-          if [[ ${GITHUB_REF} =~ refs/tags/v([0-9]+\.[0-9]+\.[0-9]+) ]]; then
-            VERSION=${BASH_REMATCH[1]}
-          elif [[ ${GITHUB_REF} =~ refs/heads/(.+) ]]; then
-            VERSION=${BASH_REMATCH[1]}
-          else
-            VERSION=$(git rev-parse --short HEAD)
-          fi
-          echo "::set-output name=version::${VERSION}"
-          echo "Selected ${VERSION} from
-            * ref: ${GITHUB_REF}
-            * sha: ${GITHUB_SHA}
-          "
+      if [[ ${GITHUB_REF} =~ refs/tags/v([0-9]+\.[0-9]+\.[0-9]+) ]]; then
+        VERSION=${BASH_REMATCH[1]}
+      elif [[ ${GITHUB_REF} =~ refs/heads/(.+) ]]; then
+        VERSION=${BASH_REMATCH[1]}
+      else
+        VERSION=$(git rev-parse --short HEAD)
+      fi
+      echo "::set-output name=version::${VERSION}"
+      echo "Selected ${VERSION} from
+        * ref: ${GITHUB_REF}
+        * sha: ${GITHUB_SHA}
+      "
         
