--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,7 +1,8 @@
 name: Publish Docker image
-on:
-  release:
-    types: [published]
+# on:
+#   release:
+#     types: [published]
+on: [push]
 jobs: 
   publish_buildpack:
     name: Push buildpack to GitHub Packages
@@ -64,12 +65,14 @@ jobs:
         set -euo pipefail
 
         echo "Verifying Release Tag"
-        if [[ $(git describe --tags --abbrev=0) =~ ^[0-9]*(.[0-9])*$ ]]; then
-          RELEASE_VERSION=$(git describe --tags --abbrev=0)
-        else
-          echo "tag does not exist or formatting is invalid"
-          exit 1
-        fi
+        # if [[ $(git describe --tags --abbrev=0) =~ ^[0-9]*(.[0-9])*$ ]]; then
+        #   RELEASE_VERSION=$(git describe --tags --abbrev=0)
+        # else
+        #   echo "tag does not exist or formatting is invalid"
+        #   exit 1
+        # fi
+        RELEASE_VERSION=1.0.0
+        
         
         echo "::set-output name=version::${RELEASE_VERSION}"
         echo "Selected version ${RELEASE_VERSION} from
