--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Publish Docker Image
 on:
   release:
       types:
@@ -22,7 +22,7 @@ jobs:
         #!/usr/bin/env bash
         set -euo pipefail
 
-        echo "Installing Jam ${JAM_VERSION}"
+        echo "Installing jam ${JAM_VERSION}"
         
         mkdir -p "${HOME}"/bin
 
