--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BUILDPACK_NAME: datadog-trace-paketo-buildpack
+      BUILDPACK_VERSION:  ${{ github.event.release.tag_name }}
     steps:
     - uses: actions/checkout@v2
 
@@ -17,86 +18,16 @@ jobs:
       with:
         go-version: 1.15
 
-    - name: Install Jam 
-      run: |
-        #!/usr/bin/env bash
-        set -euo pipefail
-
-        echo "Installing jam ${JAM_VERSION}"
-        
-        mkdir -p "${HOME}"/bin
-
-        echo "${HOME}/bin" >> "${GITHUB_PATH}"
-        curl \
-          --location \
-          --show-error \
-          --silent \
-          "https://github.com/paketo-buildpacks/packit/releases/download/v${JAM_VERSION}/jam-linux" \
-          --output ${HOME}/bin/jam
-
-        chmod a+x "${HOME}"/bin/jam
+    - name: Install Dependencies
+      run: sh .github/install_dependencies.sh
       env:
         JAM_VERSION: 0.10.2
-
-    - name: Install pack
-      run: |
-        #!/usr/bin/env bash
-        set -euo pipefail
-
-        echo "Installing pack ${PACK_VERSION}"
-
-        mkdir -p "${HOME}"/bin
-
-        echo "${HOME}/bin" >> "${GITHUB_PATH}"
-
-        curl \
-          --location \
-          --show-error \
-          --silent \
-          "https://github.com/buildpacks/pack/releases/download/v${PACK_VERSION}/pack-v${PACK_VERSION}-linux.tgz" \
-        | tar -C "${HOME}"/bin -xz pack
-      env:
         PACK_VERSION: 0.15.0
 
-    - name: Resolve Version Number
-      id: version
-      run: |
-        #!/usr/bin/env bash
-        set -euo pipefail
-
-        echo "Verifying Release Tag"
-        if [[ $(git describe --tags --abbrev=0) =~ ^[0-9]*(.[0-9])*$ ]]; then
-          RELEASE_VERSION=$(git describe --tags --abbrev=0)
-        else
-          echo "Tag is nonexistent or formatting is invalid"
-          exit 1
-        fi
-
-        echo "::set-output name=version::${RELEASE_VERSION}"
-        echo "Selected version ${RELEASE_VERSION} from
-          * ref: ${GITHUB_REF}
-          * sha: ${GITHUB_SHA}
-        "
-
     - name: Package Buildpack
-      run: |
-        #!/usr/bin/env bash
-        set -euo pipefail
-
-        mkdir ${HOME}/build
-
-        echo "Package repo using jam"
-        jam pack --buildpack "${GITHUB_WORKSPACE}/buildpack.toml" --version ${BUILDPACK_VERSION} --output "${HOME}/build/${PACKAGE_NAME}"
-
-        echo "Building docker image using packaged tgz"
-        echo "[buildpack]
-        uri = '${HOME}/build/${PACKAGE_NAME}'
-        [platform]
-        os = 'linux'" > ${HOME}/build/package.toml
-        pack package-buildpack "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" --config ${HOME}/build/package.toml --format image
+      run: sh .github/create_package.sh
       env:
         PACKAGE_NAME: datadog-trace.tgz
-        BUILDPACK_VERSION: ${{ steps.version.outputs.version }}
 
     - name: Publish buildpack
       run: |
@@ -111,14 +42,5 @@ jobs:
         docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
         
       env:
-        BUILDPACK_VERSION: ${{ steps.version.outputs.version }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         REPO_NAME: ${{ github.event.repository.name }}
-
-    
-
-        
-        
-
-        
-      
