--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,13 +16,13 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: 1.16
 
     - name: Install Dependencies
       run: sh .github/install_dependencies.sh
       env:
-        JAM_VERSION: 0.10.2
-        PACK_VERSION: 0.15.0
+        JAM_VERSION: 0.14.3
+        PACK_VERSION: 0.20.0
 
     - name: Package Buildpack
       run: sh .github/create_package.sh
@@ -35,12 +35,12 @@ jobs:
         set -euo pipefail
 
         echo "Authenticating Github Docker"
-        echo ${GITHUB_TOKEN} | docker login https://docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        echo ${GITHUB_TOKEN} | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
         
         echo "Publishing to Github Packages"
-        docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
-        docker push docker.pkg.github.com/datadog/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
+        docker tag "${BUILDPACK_NAME}:${BUILDPACK_VERSION}" ghcr.io/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
+        docker push ghcr.io/${REPO_NAME}/${BUILDPACK_NAME}:${BUILDPACK_VERSION}
         
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        REPO_NAME: ${{ github.event.repository.name }}
+        REPO_NAME: ${{ github.repository }}
